istio-resources/virtualservice-external-call.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: external-facing-services
spec:
  hosts:
  - "*"
  gateways:
  - http-gateway
  http:
  - match:
    - uri:
        prefix: /call
    route:
    - destination:
        host: call
        port:
          number: 80
