istio-resources/virtualservice-httpbin.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: httpbin
spec:
  hosts:
  - httpbin
  http:
  - route:
    - destination:
        host: httpbin
        port:
          number: 80
    fault:
      delay:
        percent: 100
        fixedDelay: 15s
